Minor code clean up (#2407)